--- a/src/app/client/profiles/update-article/update-article.component.html
+++ b/src/app/client/profiles/update-article/update-article.component.html
@@ -261,13 +261,13 @@
                                     </div>
                                 </div>
 
-                                <div class="form-group row mt-5">
+                                <!-- <div class="form-group row mt-5">
                                     <div class="col-md-12">
                                         <h3>Chọn hình thức đăng tin</h3>
                                     </div>
-                                </div>
+                                </div> -->
 
-                                <div class="row mt-3">
+                                <!-- <div class="row mt-3">
                                     <div class="col-md-4 js-group-package">
                                         <div class="form-group">
                                             <label for="post_package" class="col-form-label">Chọn loại tin</label>
@@ -308,7 +308,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
 
                                 <div class="card-title" style="font-weight: bold; font-size: 1.5rem; margin-bottom: 20px; margin-top: 30px;">Chọn phương thức thanh toán</div>
                                 <div class="form-group payment_method_group">
@@ -352,7 +352,7 @@
                                 </div>
                                 <div class="form-group row mt-5">
                                     <div class="col-md-12">
-                                        <button type="submit" class="btn btn-success mb-5 btn-lg btn-block" [disabled]="articleForm.invalid">Hoàn tất &amp; Thanh toán</button>
+                                        <button type="submit" class="btn btn-success mb-5 btn-lg btn-block" [disabled]="articleForm.invalid">Hoàn tất &amp; Sửa bài</button>
                                     </div>
                                 </div>
                                 <!-- END FORM BUTTON -->
