--- a/src/app/admin/article-manager/detail-article/detail-article.component.html
+++ b/src/app/admin/article-manager/detail-article/detail-article.component.html
@@ -345,39 +345,64 @@
                             <div class="form-group row" >
                                 <button style="margin-left: 12px;" type="button" class="btn btn-success" *ngIf="article?.status == 'Chưa duyệt'"
                                     (click)="active()">Duyệt bài</button>
-                                <button style="margin-left: 12px;" type="button" class="btn btn-info"
+                                
+                                    <button style="margin-left: 12px;" type="button" class="btn btn-info"
                                     *ngIf="article?.status == 'Đang đăng' || article?.status == 'Chưa duyệt'"
-                                    (click)="suggestFix()">Yêu cầu sửa bài</button>
-                                <button style="margin-left: 12px;" type="button" class="btn btn-secondary" *ngIf="article?.status == 'Đang đăng'"
-                                    (click)="hidden()">Ẩn bài</button>
-                                <div class="loader" *ngIf="isLoading"></div>
+                                    (click)="issYeuCauSua(isYeuCauSua)">Yêu cầu sửa bài</button>
+                                
+                                    <button style="margin-left: 12px;" type="button" class="btn btn-secondary" 
+                                    *ngIf="article?.status == 'Đang đăng'" (click)="issAnBai(isAnBai)">Ẩn bài</button>
+                                    <div class="loader" *ngIf="isLoading"></div>
                             </div>
-
-                            <!-- reply to hide posts -  phản hồi ẩn bài viết -->
-                            <div class="nguoiOghep" style="border: 2px double #C0C0C0; padding-left: 23px;
-                            margin-right: 88px;">
-                                <!-- <div class="form-group row mt-5"> -->
+                            
+                            <!-- Yêu Cầu Sửa -->
+                            <div class="nguoiOghep" *ngIf="isYeuCauSua"
+                                style="border: 2px double #C0C0C0; padding-left: 23px; margin-right: 88px;">
                                     <div style="    margin-top: 18px;" class="col-md-12">
                                         <h3 style="color: #111111; margin-left: 99px; ">Nội dung gửi Eamil phản hồi đến người dùng</h3>
                                     </div>
-                                <!-- </div> -->
                                 <div class="row mt-3">
                                     <div class="col-md-10">
                                         <div class="form-group">
                                             <label class="col-form-label" for="district_id">Mô tả cho người dùng</label>
                                             <textarea style="height: 103px; width: 547px;" name="district_id" id="district_id"
                                                 class="form-control js-select-quanhuyen select2-hidden-accessible"
-                                                aria-hidden="true">
-                                                {{article?.roommate?.description}}
+                                                aria-hidden="true" [formControl]="desc">
                                              </textarea>
                                         </div>
                                     </div>
                                 </div>
-                                <button style="background: #990000; margin-top: -6px;
-                                margin-bottom: 15px; margin-left: 437px;"
-                                type="button" class="btn btn-info">Gửi phản hồi</button>
+                                <button style="background: #990000; margin-top: -6px; 
+                                    margin-bottom: 15px; margin-left: 437px;"
+                                    type="button" class="btn btn-info" (click)="suggestFix()">Gửi phản hồi
+                                </button>
                                 <br>
                             </div>
+                            <!-- End Yêu Cầu Sửa -->
+                            <!-- Ẩn Bài -->
+                            <div class="nguoiOghep" *ngIf="isAnBai"
+                                style="border: 2px double #C0C0C0; padding-left: 23px; margin-right: 88px;">
+                                    <div style="    margin-top: 18px;" class="col-md-12">
+                                        <h3 style="color: #111111; margin-left: 99px; ">Nội dung gửi Eamil phản hồi đến người dùng</h3>
+                                    </div>
+                                <div class="row mt-3">
+                                    <div class="col-md-10">
+                                        <div class="form-group">
+                                            <label class="col-form-label" for="district_id">Mô tả cho người dùng</label>
+                                            <textarea style="height: 103px; width: 547px;" name="district_id" id="district_id"
+                                                class="form-control js-select-quanhuyen select2-hidden-accessible"
+                                                aria-hidden="true" [formControl]="desc">
+                                             </textarea>
+                                        </div>
+                                    </div>
+                                </div>
+                                <button style="background: #990000; margin-top: -6px; 
+                                    margin-bottom: 15px; margin-left: 437px;"
+                                    type="button" class="btn btn-info" (click)="hidden()">Gửi phản hồi
+                                </button>
+                                <br>
+                            </div>
+                            <!-- End Ẩn Bài -->
                         </div>
                     </div>
                 </form>
