--- a/src/app/client/profiles/update-article/update-article.component.html
+++ b/src/app/client/profiles/update-article/update-article.component.html
@@ -350,6 +350,7 @@
                                         </label>
                                     </div> -->
                                 </div>
+                                <div class="loader" [ngStyle]="{'margin-left':'360px'}" *ngIf="isLoading"></div>
                                 <div class="form-group row mt-5">
                                     <div class="col-md-12">
                                         <button type="submit" class="btn btn-success mb-5 btn-lg btn-block" [disabled]="articleForm.invalid">Hoàn tất &amp; Sửa bài</button>
