--- a/src/app/client/clients-page/detail-newpaper/detail-newpaper.component.html
+++ b/src/app/client/clients-page/detail-newpaper/detail-newpaper.component.html
@@ -185,7 +185,7 @@
         <!-- Footer -->
         <!-- Banner 2 bên -->
         <div id="fixed_Left" class="banner_fixed" style="display: block; left: 39.5px;">
-            <a target="_blank" href="https://bds123.vn/"><img src="https://phongtro123.com/images/bds123_120_300.gif"></a>
+            <a target="_blank" href="https://bds123.vn/"><img src="https://lh3.googleusercontent.com/proxy/tReDNLP2vb1gs0R2Aekzfe8dx5PxS7m4E3SeR_tLXcze3dYMF0pI7MgacnGNiT-8vVpbQ7lI8Qk836CAPG-7jzmzDCWFtPMiHGYJio5ieJ_L7RUPFWSwdLLZBUwfF_14hgEhykQJbkMdcqlJ--dE98GvE01myLZ1mqRYiD-a3KWByS6aPfskIc_Udu6vx2KjaLjmJUANsXFpD4GblVD39JiKnlqvdSKz0jYERH-OYgWSlEC3jCu3CzjcLGqUJOArlM4LdixZtMm--9CzoqLwimg_uuperwTXc5jtkziq1hUTA68qlgJ-Eg"></a>
         </div>
         <div id="fixed_Right" class="banner_fixed" style="display: block; right: 39.5px;">
             <a target="_blank"  rel="nofollow" href="http://bit.ly/nhom-phong-tro-facebook">
