--- a/src/app/client/profiles/favorites-article/favorites-article.component.html
+++ b/src/app/client/profiles/favorites-article/favorites-article.component.html
@@ -14,8 +14,8 @@
 
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="https://phongtro123.com/">Phongtro123.com</a></li>
-                            <li class="breadcrumb-item"><a href="https://phongtro123.com/quan-ly/index.html">Quản lý</a></li>
+                            <li class="breadcrumb-item"><a href="https://PhongTroThanhXuan.com/">PhongTroThanhXuan.com</a></li>
+                            <li class="breadcrumb-item"><a href="https://PhongTroThanhXuan.com/quan-ly/index.html">Quản lý</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Bài viết yêu thích</li>
                         </ol>
                     </nav>
@@ -27,11 +27,11 @@
                                 <button class="btn btn-outline-secondary dropdown-toggle btn-sm" type="button" id="dropdownMenuButton"
                                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Lọc theo loại VIP</button>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="https://phongtro123.com/quan-ly/tin-dang.html?status=all&amp;package=vip50">Tin Hot</a>
-                                    <a class="dropdown-item" href="https://phongtro123.com/quan-ly/tin-dang.html?status=all&amp;package=vip30">Tin VIP 30</a>
-                                    <a class="dropdown-item" href="https://phongtro123.com/quan-ly/tin-dang.html?status=all&amp;package=vip20">Tin VIP 20</a>
-                                    <a class="dropdown-item" href="https://phongtro123.com/quan-ly/tin-dang.html?status=all&amp;package=vip10">Tin VIP 10</a>
-                                    <a class="dropdown-item" href="https://phongtro123.com/quan-ly/tin-dang.html?status=all&amp;package=normal">Tin thường</a>
+                                    <a class="dropdown-item" href="https://PhongTroThanhXuan.com/quan-ly/tin-dang.html?status=all&amp;package=vip50">Tin Hot</a>
+                                    <a class="dropdown-item" href="https://PhongTroThanhXuan.com/quan-ly/tin-dang.html?status=all&amp;package=vip30">Tin VIP 30</a>
+                                    <a class="dropdown-item" href="https://PhongTroThanhXuan.com/quan-ly/tin-dang.html?status=all&amp;package=vip20">Tin VIP 20</a>
+                                    <a class="dropdown-item" href="https://PhongTroThanhXuan.com/quan-ly/tin-dang.html?status=all&amp;package=vip10">Tin VIP 10</a>
+                                    <a class="dropdown-item" href="https://PhongTroThanhXuan.com/quan-ly/tin-dang.html?status=all&amp;package=normal">Tin thường</a>
                                 </div>
                             </div>
                             <div class="dropdown mr-1">
@@ -78,7 +78,7 @@
                                         </td>
                                         <td  [ngStyle]="{'text-align': 'center'}" *ngIf="article.articleId === 'Bài đăng đã bị ẩn'">
                                             <div class="post_thumb">
-                                                <a href="https://phongtro123.com/quan-ly/tin-dang.html#" target="_blank">
+                                                <a href="https://PhongTroThanhXuan.com/quan-ly/tin-dang.html#" target="_blank">
                                                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/No_image_available.svg/600px-No_image_available.svg.png">
                                                 </a>
                                             </div>
@@ -165,7 +165,7 @@
                                     <a rel="nofollow" href="tel:0973800896">Điện thoại: 0973800896</a>
                                     <a rel="nofollow" target="_blank" href="https://zalo.me/0973800896">Zalo: 0973800896</a>
                                 </div>
-                                <a class="btn btn-page-contact" rel="nofollow" href="https://phongtro123.com/lien-he">Gửi liên hệ</a>
+                                <a class="btn btn-page-contact" rel="nofollow" href="https://PhongTroThanhXuan.com/lien-he">Gửi liên hệ</a>
                             </div>
                         </div>
                     </section>
