--- a/src/app/client/profiles/shared/footer/footer.component.html
+++ b/src/app/client/profiles/shared/footer/footer.component.html
@@ -27,7 +27,7 @@
                                     <a rel="nofollow" href="tel:0973800896">Điện thoại: 0973800896</a>
                                     <a rel="nofollow" target="_blank" href="https://zalo.me/0973800896">Zalo: 0973800896</a>
                                 </div>
-                                <a class="btn btn-page-contact" rel="nofollow" href="https://phongtro123.com/lien-he">Gửi liên hệ</a>
+                                <a class="btn btn-page-contact" rel="nofollow" href="https://PhongTroThanhXuan.com/lien-he">Gửi liên hệ</a>
                             </div>
                         </div>
                     </section>
