--- a/src/app/client/profiles/price-list/price-list.component.html
+++ b/src/app/client/profiles/price-list/price-list.component.html
@@ -5,12 +5,12 @@
     <div class="body">
         <div style="max-width: 806px; margin: 0 auto;">
             <h1>Giới thiệu PhongTroThanhXuan.com</h1>
-            <p>Phongtro123.com tự hào là trang web đứng top đầu google về từ khóa: cho thuê phòng trọ, thuê phòng trọ, phòng trọ hồ chí minh, phòng trọ hà nội, thuê nhà nguyên căn, cho thuê căn hộ, tìm người ở ghép…với lưu lượng truy cập (traffic) cao nhất trong
+            <p>PhongTroThanhXuan.com tự hào là trang web đứng top đầu google về từ khóa: cho thuê phòng trọ, thuê phòng trọ, phòng trọ hồ chí minh, phòng trọ hà nội, thuê nhà nguyên căn, cho thuê căn hộ, tìm người ở ghép…với lưu lượng truy cập (traffic) cao nhất trong
                 lĩnh vực.</p>
             <p>PhongtroThanhXuan.com tự hào có lượng dữ liệu bài đăng lớn nhất trong lĩnh vực cho thuê phòng trọ với hơn 70.000 tin trên hệ thống và tiếp tục tăng.</p>
             <p>PhongtroThanhXuan.com tự hào có số lượng người dùng lớn nhất trong lĩnh vực cho thuê phòng trọ với hơn 300.000 khách truy cập và hơn 2.000.000 lượt pageview mỗi tháng.</p>
             <p></p>
-            <!-- <center><img src="./Bảng giá đăng tin trên web site PhongTro123.com_files/demo_google.png" width="600"></center> -->
+            <!-- <center><img src="./Bảng giá đăng tin trên web site PhongTroThanhXuan.com_files/demo_google.png" width="600"></center> -->
             <p></p><br><br>
             <h1>Bảng giá đăng tin trên web site PhongtroThanhXuan.com</h1>
             <table>
@@ -27,49 +27,49 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><a style="color: #E13427; font-weight: bold;" href="https://phongtro123.com/bang-gia-dich-vu#vipnoibat">Tin VIP nổi bật</a></td>
+                        <td><a style="color: #E13427; font-weight: bold;" href="https://PhongTroThanhXuan.com/bang-gia-dich-vu#vipnoibat">Tin VIP nổi bật</a></td>
                         <td>50.000 đồng</td>
                         <td>315.000 đồng</td>
                         <td>1.200.000 đồng</td>
                         <td>5.000 đồng</td>
                         <td>3 ngày</td>
-                        <td><a class="btn btn-primary" href="https://phongtro123.com/bang-gia-dich-vu#vipnoibat">Xem chi tiết</a></td>
+                        <td><a class="btn btn-primary" href="https://PhongTroThanhXuan.com/bang-gia-dich-vu#vipnoibat">Xem chi tiết</a></td>
                     </tr>
                     <tr>
-                        <td><a style="color: #E13427; font-weight: bold;" href="https://phongtro123.com/bang-gia-dich-vu#vip1">Tin VIP 1</a></td>
+                        <td><a style="color: #E13427; font-weight: bold;" href="https://PhongTroThanhXuan.com/bang-gia-dich-vu#vip1">Tin VIP 1</a></td>
                         <td>30.000 đồng</td>
                         <td>190.000 đồng</td>
                         <td>800.000 đồng</td>
                         <td>3.000 đồng</td>
                         <td>3 ngày</td>
-                        <td><a class="btn btn-primary" href="https://phongtro123.com/bang-gia-dich-vu#vip1">Xem chi tiết</a></td>
+                        <td><a class="btn btn-primary" href="https://PhongTroThanhXuan.com/bang-gia-dich-vu#vip1">Xem chi tiết</a></td>
                     </tr>
                     <tr>
-                        <td><a style="color: #f60; font-weight: bold;" href="https://phongtro123.com/bang-gia-dich-vu#vip2">Tin VIP 2</a></td>
+                        <td><a style="color: #f60; font-weight: bold;" href="https://PhongTroThanhXuan.com/bang-gia-dich-vu#vip2">Tin VIP 2</a></td>
                         <td>20.000 đồng</td>
                         <td>133.000 đồng</td>
                         <td>540.000 đồng</td>
                         <td>2.000 đồng</td>
                         <td>3 ngày</td>
-                        <td><a class="btn btn-primary" href="https://phongtro123.com/bang-gia-dich-vu#vip2">Xem chi tiết</a></td>
+                        <td><a class="btn btn-primary" href="https://PhongTroThanhXuan.com/bang-gia-dich-vu#vip2">Xem chi tiết</a></td>
                     </tr>
                     <tr>
-                        <td><a style="color: #3763e0; font-weight: bold;" href="https://phongtro123.com/bang-gia-dich-vu#vip2">Tin VIP 3</a></td>
+                        <td><a style="color: #3763e0; font-weight: bold;" href="https://PhongTroThanhXuan.com/bang-gia-dich-vu#vip2">Tin VIP 3</a></td>
                         <td>10.000 đồng</td>
                         <td>63.000 đồng</td>
                         <td>240.000 đồng</td>
                         <td>2.000 đồng</td>
                         <td>3 ngày</td>
-                        <td><a class="btn btn-primary" href="https://phongtro123.com/bang-gia-dich-vu#vip3">Xem chi tiết</a></td>
+                        <td><a class="btn btn-primary" href="https://PhongTroThanhXuan.com/bang-gia-dich-vu#vip3">Xem chi tiết</a></td>
                     </tr>
                     <tr>
-                        <td><a style="color: #055699;" href="https://phongtro123.com/bang-gia-dich-vu#tinthuong">Tin thường</a></td>
+                        <td><a style="color: #055699;" href="https://PhongTroThanhXuan.com/bang-gia-dich-vu#tinthuong">Tin thường</a></td>
                         <td>2.000 đồng</td>
                         <td>12.000 đồng</td>
                         <td>48.000 đồng</td>
                         <td>2.000 đồng</td>
                         <td>5 ngày</td>
-                        <td><a class="btn btn-primary" href="https://phongtro123.com/bang-gia-dich-vu#tinthuong">Xem chi tiết</a></td>
+                        <td><a class="btn btn-primary" href="https://PhongTroThanhXuan.com/bang-gia-dich-vu#tinthuong">Xem chi tiết</a></td>
                     </tr>
                 </tbody>
             </table><br>
@@ -80,41 +80,41 @@
                         <li>Là tin được ưu tiên hiển thị, vị trí cao nhất trong danh sách tin.</li>
                         <li>Hiển thị thêm ở cột bên phải khi xem chi tiết tin đăng, tiếp cận được nhiều người xem hơn.</li>
                         <li>Tiêu đề có màu đỏ <span style="color:#E13427; font-weight:bold;">IN ĐẬM NỔI BẬT</span>, có khung viền <span style="color: #E13427;">màu đỏ</span> thu hút người xem</li>
-                        <li>Có biểu tượng <img src="https://phongtro123.com/images/hot_item.png" width="50"><img src="https://phongtro123.com/images/hot.gif"></li>
+                        <li>Có biểu tượng <img src="https://PhongTroThanhXuan.com/images/hot_item.png" width="50"><img src="https://PhongTroThanhXuan.com/images/hot.gif"></li>
                         <li>Có 5 dấu sao <span class="vip_star" style="color: #ffc70c;">★★★★★</span></li>
                         <li>Giá ngày: 50.000 đồng, giá tuần (7 ngày): 315.000 đồng, giá tháng (30 ngày): 1.200.000 đồng</li>
                         <li>Đăng tối thiểu 3 ngày</li>
                     </ul>
                     <p style="font-weight: bold; text-decoration: underline;">Ảnh mẫu vị trí</p>
-                    <p><img src="https://phongtro123.com/images/tinvipnoibat.jpg"></p>
-                    <p><img src="https://phongtro123.com/images/tinvipnoibat2.jpg"></p>
-                    <p><img src="https://phongtro123.com/images/tinvipnoibat3.jpg"></p>
+                    <p><img src="https://PhongTroThanhXuan.com/images/tinvipnoibat.jpg"></p>
+                    <p><img src="https://PhongTroThanhXuan.com/images/tinvipnoibat2.jpg"></p>
+                    <p><img src="https://PhongTroThanhXuan.com/images/tinvipnoibat3.jpg"></p>
                 </div>
                 <div class="data_block" id="vip1">
                     <h4 class="block_title">Tin vip 1</h4>
                     <ul>
                         <li>Là tin được hiển thị sau tin vip nổi bật.</li>
                         <li>Tiêu đề có màu đỏ <span style="color:#E13427; font-weight:bold;">IN ĐẬM NỔI BẬT</span> thu hút người xem</li>
-                        <li>Có biểu tượng <img src="https://phongtro123.com/images/vip1_item.png" width="50"></li>
+                        <li>Có biểu tượng <img src="https://PhongTroThanhXuan.com/images/vip1_item.png" width="50"></li>
                         <li>Có 4 dấu sao <span class="vip_star" style="color: #ffc70c;">★★★★</span></li>
                         <li>Giá ngày: 30.000 đồng, giá tuần (7 ngày): 190.000 đồng, giá tháng (30 ngày): 800.000 đồng</li>
                         <li>Đăng tối thiểu 3 ngày</li>
                     </ul>
                     <p style="font-weight: bold; text-decoration: underline;">Ảnh mẫu vị trí</p>
-                    <p><img src="https://phongtro123.com/images/tinvip1.jpg"></p>
+                    <p><img src="https://PhongTroThanhXuan.com/images/tinvip1.jpg"></p>
                 </div>
                 <div class="data_block" id="vip2">
                     <h4 class="block_title">Tin vip 2</h4>
                     <ul>
                         <li>Là tin được hiển thị sau tin vip 1.</li>
                         <li>Tiêu đề có màu vàng cam <span style="color:#f60; font-weight:bold;">IN ĐẬM NỔI BẬT</span> thu hút người xem</li>
-                        <li>Có biểu tượng <img src="https://phongtro123.com/images/vip2_item.png" width="50"></li>
+                        <li>Có biểu tượng <img src="https://PhongTroThanhXuan.com/images/vip2_item.png" width="50"></li>
                         <li>Có 3 dấu sao <span class="vip_star" style="color: #ffc70c;">★★★</span></li>
                         <li>Giá ngày: 20.000 đồng, giá tuần (7 ngày): 133.000 đồng, giá tháng (30 ngày): 540.000 đồng</li>
                         <li>Đăng tối thiểu 3 ngày</li>
                     </ul>
                     <p style="font-weight: bold; text-decoration: underline;">Ảnh mẫu vị trí</p>
-                    <p><img src="https://phongtro123.com/images/tinvip2.jpg"></p>
+                    <p><img src="https://PhongTroThanhXuan.com/images/tinvip2.jpg"></p>
                 </div>
             </div>
             <div class="data_block" id="vip3">
@@ -122,13 +122,13 @@
                 <ul>
                     <li>Là tin được hiển thị sau tin vip 2.</li>
                     <li>Tiêu đề có màu xanh <span style="color:#3763e0; font-weight:bold;">IN ĐẬM NỔI BẬT</span> thu hút người xem</li>
-                    <li>Có biểu tượng <img src="https://phongtro123.com/images/vip3_item.png" width="50"></li>
+                    <li>Có biểu tượng <img src="https://PhongTroThanhXuan.com/images/vip3_item.png" width="50"></li>
                     <li>Có 2 dấu sao <span class="vip_star" style="color: #ffc70c;">★★</span></li>
                     <li>Giá ngày: 10.000 đồng, giá tuần (7 ngày): 63.000 đồng, giá tháng (30 ngày): 240.000 đồng</li>
                     <li>Đăng tối thiểu 3 ngày</li>
                 </ul>
                 <p style="font-weight: bold; text-decoration: underline;">Ảnh mẫu vị trí</p>
-                <p><img src="https://phongtro123.com/images/tinvip3.jpg"></p>
+                <p><img src="https://PhongTroThanhXuan.com/images/tinvip3.jpg"></p>
             </div>
             <div class="data_block" id="tinthuong">
                 <h4 class="block_title">tin thường</h4>
@@ -139,19 +139,19 @@
                     <li>Đăng tối thiểu 5 ngày</li>
                 </ul>
                 <p style="font-weight: bold; text-decoration: underline;">Ảnh mẫu vị trí</p>
-                <p><img src="https://phongtro123.com/images/tinthuong.jpg"></p>
+                <p><img src="https://PhongTroThanhXuan.com/images/tinthuong.jpg"></p>
             </div>
             <div class="data_block" id="thanhtoan">
                 <h1>Phương thức thanh toán</h1>
-                <p>Phongtro123.com hỗ trợ nhiều phương thức thanh toán, bạn chọn loại thanh toán phù hợp với bạn nhất</p>
+                <p>PhongTroThanhXuan.com hỗ trợ nhiều phương thức thanh toán, bạn chọn loại thanh toán phù hợp với bạn nhất</p>
                 <ul>
-                    <li><a href="https://phongtro123.com/quan-ly/nap-tien/chuyen-khoan.html">Chuyển khoản</a></li>
-                    <li><a href="https://phongtro123.com/quan-ly/nap-tien/atm-internet-banking.html">Thẻ ngân hàng nội địa (atm internet banking)</a></li>
-                    <li><a href="https://phongtro123.com/quan-ly/nap-tien/the-tin-dung.html">Thẻ tín dụng quốc tế (visa, mastercard, jcb)</a></li>
-                    <li><a href="https://phongtro123.com/quan-ly/nap-tien/momo.html">Ví điện tử Momo</a></li>
-                    <li><a href="https://phongtro123.com/quan-ly/nap-tien/tien-mat.html">Tiền mặt</a></li>
-                    <li><a href="https://phongtro123.com/quan-ly/nap-tien/qr-code.html">Thanh toán QRCODE</a></li>
-                    <li><a href="https://phongtro123.com/quan-ly/nap-tien/cua-hang-tien-loi.html">Thanh toán tại cửa hàng tiện lợi</a></li>
+                    <li><a href="https://PhongTroThanhXuan.com/quan-ly/nap-tien/chuyen-khoan.html">Chuyển khoản</a></li>
+                    <li><a href="https://PhongTroThanhXuan.com/quan-ly/nap-tien/atm-internet-banking.html">Thẻ ngân hàng nội địa (atm internet banking)</a></li>
+                    <li><a href="https://PhongTroThanhXuan.com/quan-ly/nap-tien/the-tin-dung.html">Thẻ tín dụng quốc tế (visa, mastercard, jcb)</a></li>
+                    <li><a href="https://PhongTroThanhXuan.com/quan-ly/nap-tien/momo.html">Ví điện tử Momo</a></li>
+                    <li><a href="https://PhongTroThanhXuan.com/quan-ly/nap-tien/tien-mat.html">Tiền mặt</a></li>
+                    <li><a href="https://PhongTroThanhXuan.com/quan-ly/nap-tien/qr-code.html">Thanh toán QRCODE</a></li>
+                    <li><a href="https://PhongTroThanhXuan.com/quan-ly/nap-tien/cua-hang-tien-loi.html">Thanh toán tại cửa hàng tiện lợi</a></li>
                 </ul>
             </div>
         </div>
