--- a/src/app/client/profiles/recharge-history/recharge-history.component.html
+++ b/src/app/client/profiles/recharge-history/recharge-history.component.html
@@ -15,8 +15,8 @@
 
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="https://phongtro123.com/">Phongtro123.com</a></li>
-                            <li class="breadcrumb-item"><a href="https://phongtro123.com/quan-ly/index.html">Quản lý</a></li>
+                            <li class="breadcrumb-item"><a href="https://PhongTroThanhXuan.com/">PhongTroThanhXuan.com</a></li>
+                            <li class="breadcrumb-item"><a href="https://PhongTroThanhXuan.com/quan-ly/index.html">Quản lý</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Lịch sử nạp tiền</li>
                         </ol>
                     </nav>
@@ -93,7 +93,7 @@
                                     <a rel="nofollow" href="tel:0917686101">Điện thoại: 0917686101</a>
                                     <a rel="nofollow" target="_blank" href="https://zalo.me/0917686101">Zalo: 0917686101</a>
                                 </div>
-                                <a class="btn btn-page-contact" rel="nofollow" href="https://phongtro123.com/lien-he">Gửi liên hệ</a>
+                                <a class="btn btn-page-contact" rel="nofollow" href="https://PhongTroThanhXuan.com/lien-he">Gửi liên hệ</a>
                             </div>
                         </div>
                     </section>
