--- a/src/app/client/profiles/update-article/update-article.component.html
+++ b/src/app/client/profiles/update-article/update-article.component.html
@@ -13,8 +13,8 @@
                     </div> -->
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="https://phongtro123.com/">Phongtro123.com</a></li>
-                            <li class="breadcrumb-item"><a href="https://phongtro123.com/quan-ly/index.html">Quản lý</a></li>
+                            <li class="breadcrumb-item"><a href="https://PhongTroThanhXuan.com/">PhongTroThanhXuan.com</a></li>
+                            <li class="breadcrumb-item"><a href="https://PhongTroThanhXuan.com/quan-ly/index.html">Quản lý</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Đăng tin mới</li>
                         </ol>
                     </nav>
@@ -316,7 +316,7 @@
                                         <input type="radio" name="payment_method" id="payment_from_account" value="account" checked="checked" class="form-check-input">
                                         <label for="payment_from_account" class="form-check-label">
                                             Trừ tiền trong tài khoản (Bạn đang có TK Chính: 0đ)
-                                            <!-- <p style="color: red;" class="js-note-outofmoney">Số tiền trong tài khoản của bạn không đủ để thực hiện thanh toán, vui lòng <a href="https://phongtro123.com/quan-ly/nap-tien.html">nạp thêm</a> hoặc chọn phương thức khác bên dưới</p> -->
+                                            <!-- <p style="color: red;" class="js-note-outofmoney">Số tiền trong tài khoản của bạn không đủ để thực hiện thanh toán, vui lòng <a href="https://PhongTroThanhXuan.com/quan-ly/nap-tien.html">nạp thêm</a> hoặc chọn phương thức khác bên dưới</p> -->
                                         </label>
                                     </div>
                                     <br>
@@ -510,7 +510,7 @@
                                     <a rel="nofollow" href="tel:0973800896">Điện thoại: 0973800896</a>
                                     <a rel="nofollow" target="_blank" href="https://zalo.me/0973800896">Zalo: 0973800896</a>
                                 </div>
-                                <a class="btn btn-page-contact" rel="nofollow" href="https://phongtro123.com/lien-he">Gửi liên hệ</a>
+                                <a class="btn btn-page-contact" rel="nofollow" href="https://PhongTroThanhXuan.com/lien-he">Gửi liên hệ</a>
                             </div>
                         </div>
                     </section>
