delete link phongtro123

--- a/src/app/client/profiles/payment-history/payment-history.component.html
+++ b/src/app/client/profiles/payment-history/payment-history.component.html
@@ -14,7 +14,7 @@
 
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="https://phongtro123.com/">Phongtro123.com</a></li>
+                            <li class="breadcrumb-item"><a href="https://phongtro123.com/">PhongTroThanhXuan.com</a></li>
                             <li class="breadcrumb-item"><a href="https://phongtro123.com/quan-ly/index.html">Quản lý</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Lịch sử thanh toán</li>
                         </ol>
