--- a/src/app/client/profiles/article-manager/article-manager.component.html
+++ b/src/app/client/profiles/article-manager/article-manager.component.html
@@ -14,8 +14,8 @@
 
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="https://phongtro123.com/">PhongtroThanhXuan.com</a></li>
-                            <li class="breadcrumb-item"><a href="https://phongtro123.com/quan-ly/index.html">Quản lý</a></li>
+                            <li class="breadcrumb-item"><a>PhongtroThanhXuan.com</a></li>
+                            <li class="breadcrumb-item"><a >Quản lý</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Danh sách tin đăng</li>
                         </ol>
                     </nav>
