--- a/src/app/client/profiles/paypal/view-paypal/view-paypal.component.html
+++ b/src/app/client/profiles/paypal/view-paypal/view-paypal.component.html
@@ -14,8 +14,8 @@
                     
 <nav aria-label="breadcrumb">
 <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="https://PhongTroThanhXuan.com/">PhongTroThanhXuan.com</a></li>
-    <li class="breadcrumb-item"><a href="https://PhongTroThanhXuan.com/quan-ly/index.html">Quản lý</a></li>
+    <li class="breadcrumb-item"><a href="https://phongtro123.com/">PhongTroThanhXuan.com</a></li>
+    <li class="breadcrumb-item"><a href="https://phongtro123.com/quan-ly/index.html">Quản lý</a></li>
     <li class="breadcrumb-item active" aria-current="page">Nạp tiền</li>
 </ol>
 </nav>
@@ -37,7 +37,7 @@
                 <div class="method_item">
                     <a href="#">
                         <div class="method_item_icon">
-                            <img src="https://PhongTroThanhXuan.com/images/bank-transfer.png" alt="Chuyển khoản trực tiếp" title="Chuyển khoản trực tiếp">
+                            <img src="https://phongtro123.com/images/bank-transfer.png" alt="Chuyển khoản trực tiếp" title="Chuyển khoản trực tiếp">
                         </div>
                         <div class="method_item_name">
                             Chuyển khoản
@@ -51,7 +51,7 @@
                 <div class="method_item">
                     <a href="#">
                         <div class="method_item_icon">
-                            <img src="https://PhongTroThanhXuan.com/images/payment-method.svg" alt="Nạp tiền bằng ATM Internet Banking" title="Nạp tiền bằng Internet Banking">
+                            <img src="https://phongtro123.com/images/payment-method.svg" alt="Nạp tiền bằng ATM Internet Banking" title="Nạp tiền bằng Internet Banking">
                         </div>
                         <div class="method_item_name">
                             Thẻ ATM Internet Banking
@@ -65,7 +65,7 @@
                 <div class="method_item">
                     <a routerLink="/profile/paypal-handle">
                         <div class="method_item_icon">
-                            <img src="https://PhongTroThanhXuan.com/images/credit-card.png" alt="Nạp tiền bằng thẻ tín dụng quốc tế" title="Nạp tiền bằng thẻ tín dụng quốc tế">
+                            <img src="https://phongtro123.com/images/credit-card.png" alt="Nạp tiền bằng thẻ tín dụng quốc tế" title="Nạp tiền bằng thẻ tín dụng quốc tế">
                         </div>
                         <div class="method_item_name">
                             Thẻ tín dụng quốc tế
@@ -79,7 +79,7 @@
                 <div class="method_item">
                     <a href="#">
                         <div class="method_item_icon">
-                            <img src="https://PhongTroThanhXuan.com/images/cash.svg" alt="Nạp tiền bằng tiền mặt" title="Nạp tiền bằng tiền mặt">
+                            <img src="https://phongtro123.com/images/cash.svg" alt="Nạp tiền bằng tiền mặt" title="Nạp tiền bằng tiền mặt">
                         </div>
                         <div class="method_item_name">
                             Tiền mặt
@@ -92,7 +92,7 @@
                 <div class="method_item">
                     <a href="#">
                         <div class="method_item_icon">
-                            <img src="https://PhongTroThanhXuan.com/images/momo.png" alt="Nạp tiền bằng MOMO" title="Nạp tiền bằng MOMO">
+                            <img src="https://phongtro123.com/images/momo.png" alt="Nạp tiền bằng MOMO" title="Nạp tiền bằng MOMO">
                         </div>
                         <div class="method_item_name">
                             MOMO
@@ -105,7 +105,7 @@
                 <div class="method_item">
                     <a href="#">
                         <div class="method_item_icon">
-                            <img src="https://PhongTroThanhXuan.com/images/zalopay.png" alt="Nạp tiền bằng ZaloPay" title="Nạp tiền bằng ZaloPay">
+                            <img src="https://phongtro123.com/images/zalopay.png" alt="Nạp tiền bằng ZaloPay" title="Nạp tiền bằng ZaloPay">
                         </div>
                         <div class="method_item_name">
                             ZaloPay
@@ -119,7 +119,7 @@
                 <div class="method_item">
                     <a href="#">
                         <div class="method_item_icon">
-                            <img src="https://PhongTroThanhXuan.com/images/online-store.svg" alt="Điểm giao dịch, cửa hàng tiện lợi" title="Điểm giao dịch, cửa hàng tiện lợi">
+                            <img src="https://phongtro123.com/images/online-store.svg" alt="Điểm giao dịch, cửa hàng tiện lợi" title="Điểm giao dịch, cửa hàng tiện lợi">
                         </div>
                         <div class="method_item_name">
                             Điểm giao dịch, cửa hàng tiện lợi
@@ -133,7 +133,7 @@
                 <div class="method_item">
                     <a href="#">
                         <div class="method_item_icon">
-                            <img src="https://PhongTroThanhXuan.com/images/qr-code.png" alt="Quét mã QRCode" title="Quét mã QRCode">
+                            <img src="https://phongtro123.com/images/qr-code.png" alt="Quét mã QRCode" title="Quét mã QRCode">
                         </div>
                         <div class="method_item_name">
                             Quét mã QRCode
@@ -146,9 +146,9 @@
             <!--
             <div class="col-md-4">
                 <div class="method_item">
-                    <a href="https://PhongTroThanhXuan.com/quan-ly/nap-tien/ma-thanh-toan.html">
+                    <a href="https://phongtro123.com/quan-ly/nap-tien/ma-thanh-toan.html">
                         <div class="method_item_icon">
-                            <img src="https://PhongTroThanhXuan.com/images/gift.svg" alt="Nạp tiền bằng mã thanh toán" title="Nạp tiền bằng mã thanh toán">
+                            <img src="https://phongtro123.com/images/gift.svg" alt="Nạp tiền bằng mã thanh toán" title="Nạp tiền bằng mã thanh toán">
                         </div>
                         <div class="method_item_name">
                             Mã thanh toán
@@ -196,7 +196,7 @@
         <a rel="nofollow" href="tel:0973800896">Điện thoại: 0973800896</a>
         <a rel="nofollow" target="_blank" href="https://zalo.me/0973800896">Zalo: 0973800896</a>
     </div>
-    <a class="btn btn-page-contact" rel="nofollow" href="https://PhongTroThanhXuan.com/lien-he">Gửi liên hệ</a>
+    <a class="btn btn-page-contact" rel="nofollow" href="https://phongtro123.com/lien-he">Gửi liên hệ</a>
 </div> 
 </div>
 </section>
@@ -207,22 +207,22 @@
                             <div class="footer_row clearfix">
                                 <div class="footer_col">
                                     <div class="footer_col_header">
-                                        <a class="logo" href="https://PhongTroThanhXuan.com/">Thuê phòng trọ</a>
+                                        <a class="logo" href="https://phongtro123.com/">Thuê phòng trọ</a>
                                     </div>
                                     <div class="footer_col_body">
-                                        <p style="line-height: 1.3;">Đứng đầu các từ khóa liên quan đến <a href="https://PhongTroThanhXuan.com/cho-thue-phong-tro" title="phòng trọ cho thuê"><strong>phòng trọ cho thuê</strong></a>, <a href="https://PhongTroThanhXuan.com/nha-cho-thue" title="nhà cho thuê"><strong>nhà cho thuê</strong></a>, <a href="https://PhongTroThanhXuan.com/tim-nguoi-o-ghep" title="tìm người ở ghép"><strong>tìm người ở ghép</strong></a></p><p style="line-height: 1.3;"><strong>70.000+</strong> tin bài trên hệ thống, và tiếp tục tăng</p><p style="line-height: 1.3;"><strong>300.000+</strong> khách truy cập và <strong>hơn 2 triệu</strong> lượt xem mỗi tháng</p>
+                                        <p style="line-height: 1.3;">Đứng đầu các từ khóa liên quan đến <a href="https://phongtro123.com/cho-thue-phong-tro" title="phòng trọ cho thuê"><strong>phòng trọ cho thuê</strong></a>, <a href="https://phongtro123.com/nha-cho-thue" title="nhà cho thuê"><strong>nhà cho thuê</strong></a>, <a href="https://phongtro123.com/tim-nguoi-o-ghep" title="tìm người ở ghép"><strong>tìm người ở ghép</strong></a></p><p style="line-height: 1.3;"><strong>70.000+</strong> tin bài trên hệ thống, và tiếp tục tăng</p><p style="line-height: 1.3;"><strong>300.000+</strong> khách truy cập và <strong>hơn 2 triệu</strong> lượt xem mỗi tháng</p>
                                     </div>
                                 </div>
                                 <div class="footer_col">
-                                    <div class="footer_col_header">Về PhongTroThanhXuan.COM</div>
+                                    <div class="footer_col_header">Về phongtro123.COM</div>
                                     <div class="footer_col_body">
                                         <ul class="footer_menu">
-                                            <li><a href="https://PhongTroThanhXuan.com/">Trang chủ</a></li>
-                                            <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/gioi-thieu">Giới thiệu</a></li>
-                                            <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/quy-che-hoat-dong">Quy chế hoạt động</a></li>
-                                            <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/quy-dinh-su-dung">Quy định sử dụng</a></li>
-                                            <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/chinh-sach-bao-mat">Chính sách bảo mật</a></li>
-                                            <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/lien-he">Liên hệ</a></li>
+                                            <li><a href="https://phongtro123.com/">Trang chủ</a></li>
+                                            <li><a rel="nofollow" href="https://phongtro123.com/gioi-thieu">Giới thiệu</a></li>
+                                            <li><a rel="nofollow" href="https://phongtro123.com/quy-che-hoat-dong">Quy chế hoạt động</a></li>
+                                            <li><a rel="nofollow" href="https://phongtro123.com/quy-dinh-su-dung">Quy định sử dụng</a></li>
+                                            <li><a rel="nofollow" href="https://phongtro123.com/chinh-sach-bao-mat">Chính sách bảo mật</a></li>
+                                            <li><a rel="nofollow" href="https://phongtro123.com/lien-he">Liên hệ</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -230,22 +230,22 @@
                                     <div class="footer_col_header">Hỗ trợ khách hàng</div>
                                     <div class="footer_col_body">
                                         <ul class="footer_menu">
-                                            <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/cau-hoi-thuong-gap">Câu hỏi thường gặp</a></li>
-                                            <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/huong-dan-su-dung">Hướng dẫn đăng tin</a></li>
-                                            <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/bang-gia-dich-vu">Bảng giá dịch vụ</a></li>
-                                            <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/quy-dinh-dang-tin">Quy định đăng tin</a></li>
-                                            <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/chinh-sach-giai-quyet-khieu-nai">Chính sách giải quyết khiếu nại</a></li>
+                                            <li><a rel="nofollow" href="https://phongtro123.com/cau-hoi-thuong-gap">Câu hỏi thường gặp</a></li>
+                                            <li><a rel="nofollow" href="https://phongtro123.com/huong-dan-su-dung">Hướng dẫn đăng tin</a></li>
+                                            <li><a rel="nofollow" href="https://phongtro123.com/bang-gia-dich-vu">Bảng giá dịch vụ</a></li>
+                                            <li><a rel="nofollow" href="https://phongtro123.com/quy-dinh-dang-tin">Quy định đăng tin</a></li>
+                                            <li><a rel="nofollow" href="https://phongtro123.com/chinh-sach-giai-quyet-khieu-nai">Chính sách giải quyết khiếu nại</a></li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="footer_col">
                                     <div class="footer_col_header">Liên hệ với chúng tôi</div>
                                     <div class="footer_col_body mb30">
-                                        <a target="_blank" style="display: inline-block; margin-right: 5px;" href="https://www.facebook.com/PhongTroThanhXuan.com.vn/"><img style="border: 1px solid #32599d; border-radius: 50%;" src="./#99624 - Nạp tiền vào tài khoản - PhongTroThanhXuan.com_files/icon_facebook.svg" width="30"></a>
-                                        <a target="_blank" style="display: inline-block; margin-right: 5px;" href="https://plus.google.com/+PhongTroThanhXuanchothuenhatro"><img style="border: 1px solid #df3f31; border-radius: 50%;" src="./#99624 - Nạp tiền vào tài khoản - PhongTroThanhXuan.com_files/icon_google.svg" width="30"></a>
-                                        <a target="_blank" style="display: inline-block; margin-right: 5px;" href="https://zalo.me/273083239502498077"><img style="border: 1px solid #00a1dc; border-radius: 50%;" src="./#99624 - Nạp tiền vào tài khoản - PhongTroThanhXuan.com_files/icon_zalo.svg" width="30"></a>
-                                        <a target="_blank" style="display: inline-block; margin-right: 5px;" href="viber://chat?number=0973800896"><img style="border: 1px solid #9f1cb8; border-radius: 50%;" src="./#99624 - Nạp tiền vào tài khoản - PhongTroThanhXuan.com_files/icon_viber.svg" width="30"></a>
-                                        <a target="_blank" style="display: inline-block;" href="https://twitter.com/PhongTroThanhXuan"><img style="border: 1px solid #54a3de; border-radius: 50%;" src="./#99624 - Nạp tiền vào tài khoản - PhongTroThanhXuan.com_files/icon_twitter.svg" width="30"></a>
+                                        <a target="_blank" style="display: inline-block; margin-right: 5px;" href="https://www.facebook.com/phongtro123.com.vn/"><img style="border: 1px solid #32599d; border-radius: 50%;" src="./#99624 - Nạp tiền vào tài khoản - phongtro123.com_files/icon_facebook.svg" width="30"></a>
+                                        <a target="_blank" style="display: inline-block; margin-right: 5px;" href="https://plus.google.com/+phongtro123chothuenhatro"><img style="border: 1px solid #df3f31; border-radius: 50%;" src="./#99624 - Nạp tiền vào tài khoản - phongtro123.com_files/icon_google.svg" width="30"></a>
+                                        <a target="_blank" style="display: inline-block; margin-right: 5px;" href="https://zalo.me/273083239502498077"><img style="border: 1px solid #00a1dc; border-radius: 50%;" src="./#99624 - Nạp tiền vào tài khoản - phongtro123.com_files/icon_zalo.svg" width="30"></a>
+                                        <a target="_blank" style="display: inline-block; margin-right: 5px;" href="viber://chat?number=0973800896"><img style="border: 1px solid #9f1cb8; border-radius: 50%;" src="./#99624 - Nạp tiền vào tài khoản - phongtro123.com_files/icon_viber.svg" width="30"></a>
+                                        <a target="_blank" style="display: inline-block;" href="https://twitter.com/phongtro123"><img style="border: 1px solid #54a3de; border-radius: 50%;" src="./#99624 - Nạp tiền vào tài khoản - phongtro123.com_files/icon_twitter.svg" width="30"></a>
                                     </div>
                                     <div class="footer_col_header">Phương thức thanh toán</div>
                                     <div class="footer_col_body">
@@ -262,14 +262,14 @@
                                 <div class="w980">
                                     <p class="company_name"><strong>CÔNG TY TNHH LBKCORP</strong></p>
                                     <p><strong>Tổng đài CSKH: 0973800896</strong></p>
-                                    <p>Copyright © 2015 - 2021 PhongTroThanhXuan.com</p>
+                                    <p>Copyright © 2015 - 2021 phongtro123.com</p>
                                     <p>Email: cskh.phongtro@gmail.com | lienhe.phongtro@gmail.com</p>
                                     <p>Địa chỉ: LE-4.07, Toà nhà Lexington Residence, Số 67 Mai Chí Thọ, Phường An Phú, Quận 2, Tp. Hồ Chí Minh.</p>
                                     <p>Giấy phép đăng ký kinh doanh số 0313588502 do Sở kế hoạch và Đầu tư thành phố Hồ Chí Minh cấp ngày 30 tháng 3 năm 2017.</p>
                                     <!-- <center style="display: flex; align-items: center; justify-content: center;">
                                         <a class="bds_icon dkbct" style="display: inline-block; margin: 0 5px;" rel="nofollow" target="_blank" href="http://online.gov.vn/HomePage/WebsiteDisplay.aspx?DocId=43297"></a>
-                                        <a style="display: inline-block; margin: 0 5px;" rel="nofollow" target="_blank" href="https://www.dmca.com/Protection/Status.aspx?ID=92715b33-c457-422d-95c4-a5453e80e9bf&amp;refurl=https://PhongTroThanhXuan.com/" title="DMCA.com Protection Status" class="dmca-badge"><img src="./#99624 - Nạp tiền vào tài khoản - PhongTroThanhXuan.com_files/dmca-badge-w250-2x1-04.png" width="100" alt="DMCA.com Protection Status"></a>
-                                        <script async="" defer="" src="./#99624 - Nạp tiền vào tài khoản - PhongTroThanhXuan.com_files/DMCABadgeHelper.min.js.download"></script>
+                                        <a style="display: inline-block; margin: 0 5px;" rel="nofollow" target="_blank" href="https://www.dmca.com/Protection/Status.aspx?ID=92715b33-c457-422d-95c4-a5453e80e9bf&amp;refurl=https://phongtro123.com/" title="DMCA.com Protection Status" class="dmca-badge"><img src="./#99624 - Nạp tiền vào tài khoản - phongtro123.com_files/dmca-badge-w250-2x1-04.png" width="100" alt="DMCA.com Protection Status"></a>
+                                        <script async="" defer="" src="./#99624 - Nạp tiền vào tài khoản - phongtro123.com_files/DMCABadgeHelper.min.js.download"></script>
                                     </center> -->
                                 </div>
                             </div>
