--- a/src/app/admin/article-manager/detail-article/detail-article.component.html
+++ b/src/app/admin/article-manager/detail-article/detail-article.component.html
@@ -72,12 +72,12 @@
                                         <p>Vị trí tin bài trên bản đồ
                                         </p>
                                         <div id="maps"
-                                            style="width: 100%; height: 300px; position: relative; overflow: hidden; border: 1px solid red;">
-                                            <!-- <agm-map [zoom]="13" [latitude]="latitude" [longitude]="longitude">
+                                            style="width: 100%; height: 300px; position: relative; overflow: hidden;">
+                                            <agm-map [zoom]="13" [latitude]="latitude" [longitude]="longitude">
                                                 <agm-marker [latitude]="latitude" [longitude]="longitude">
                                                     <agm-info-window><strong>{{article?.location.wardName}}, {{article?.location.districtName}}, {{article?.location.cityName}}</strong></agm-info-window>
                                                 </agm-marker>
-                                            </agm-map> -->
+                                            </agm-map>
                                         </div>
                                     </div>
                                 </div>
