--- a/src/app/client/clients-page/client-home/client-home.component.html
+++ b/src/app/client/clients-page/client-home/client-home.component.html
@@ -13,14 +13,14 @@
             <section class="section section-top-location">
                 <div class="section-header"><span class="section-title small">Khu vực nổi bật</span></div>
                 <div class="location-city clearfix"><a class="location-item city-1"
-                        href="https://PhongTroThanhXuan.com/tinh-thanh/ho-chi-minh" title="Cho thuê phòng trọ Hồ Chí Minh">
+                        href="/rent-room?type=1&city=3" title="Cho thuê phòng trọ Hồ Chí Minh">
                         <div class="location-bg"></div><span class="location-cat">Phòng trọ <span
                                 class="location-name">Hồ Chí Minh</span></span>
-                    </a><a class="location-item city-2" href="https://PhongTroThanhXuan.com/tinh-thanh/ha-noi"
+                    </a><a class="location-item city-2" href="/rent-room?type=1&city=1"
                         title="Cho thuê phòng trọ Hà Nội">
                         <div class="location-bg"></div><span class="location-cat">Phòng trọ <span
                                 class="location-name">Hà Nội</span></span>
-                    </a><a class="location-item city-4" href="https://PhongTroThanhXuan.com/tinh-thanh/da-nang"
+                    </a><a class="location-item city-4" href="/rent-room?type=1&city=2"
                         title="Cho thuê phòng trọ Đà Nẵng">
                         <div class="location-bg"></div><span class="location-cat">Phòng trọ <span
                                 class="location-name">Đà Nẵng</span></span>
