--- a/src/app/client/profiles/create-article/create-article.component.html
+++ b/src/app/client/profiles/create-article/create-article.component.html
@@ -414,7 +414,7 @@
                                 </div>
                             </div>
                             <div class="col-md-4">
-                                <!-- <div id="maps" style="width: 100%; height: 300px; margin-bottom: 30px; position: relative; overflow: hidden;">
+                                <div id="maps" style="width: 100%; height: 300px; margin-bottom: 30px; position: relative; overflow: hidden;">
                                     <div style="height: 100%; width: 100%; position: absolute; top: 0px; left: 0px; background-color: rgb(229, 227, 223);">
                                         <agm-map [zoom]="13" [latitude]="latitude" [longitude]="longitude">
                                             <agm-marker [latitude]="latitude" [longitude]="longitude">
@@ -426,7 +426,7 @@
                                             </agm-marker>
                                         </agm-map>
                                     </div>
-                                </div> -->
+                                </div>
                                 <div class="card mb-5" style="color: #856404; background-color: #fff3cd; border-color: #ffeeba;">
                                     <div class="card-body">
                                         <h4 class="card-title">Lưu ý khi đăng tin</h4>
