--- a/src/app/client/clients-page/client-roommates/client-roommates.component.html
+++ b/src/app/client/clients-page/client-roommates/client-roommates.component.html
@@ -22,10 +22,7 @@
             </div>
             
             <header class="page-header category">
-                <h1 class="page-h1">Tìm Người Ở Ghép, Tìm Nam Ở Ghép, Tìm Nữ Ở Ghép -  Tại Hà Nội</h1>
-                <div class="page-description">Có <strong>15.830</strong> tin đăng tìm người ở ghép tại khu vực Hà Nội. Tìm
-                    người ở ghép, tìm nam ở ghép, tìm nữ ở ghép, share phòng trọ, tìm chỗ ở ghép cùng, tìm bạn ở ghép,
-                    xin ở ghép mới nhất 2021. Đăng tin ở ghép hiệu quả, nhanh chóng nhất...</div>
+                <h1 class="page-h1">Tìm Người Ở Ghép, Tìm Nam Ở Ghép, Tìm Nữ Ở Ghép </h1>
             </header>
             
             <div class="container clearfix">
@@ -34,11 +31,8 @@
                         <div class="section-header">
                             <h2 class="section-title">Tìm ở ghép</h2>
                         </div>
-                        <div class="post-sort"><span>Sắp xếp: </span><a rel="nofollow" class="active"
-                                href="https://PhongTroThanhXuan.com/tim-nguoi-o-ghep">Mặc định</a><a rel="nofollow" class=""
-                                href="https://PhongTroThanhXuan.com/tim-nguoi-o-ghep?orderby=moi-nhat">Mới nhất</a><a
-                                rel="nofollow" class="" href="https://PhongTroThanhXuan.com/tim-nguoi-o-ghep?orderby=video">Có
-                                video</a></div>
+                        <div class="post-sort"><span>Sắp xếp: </span><a rel="nofollow" class=""
+                                href="https://PhongTroThanhXuan.com/tim-nguoi-o-ghep?orderby=moi-nhat">Mới nhất</a></div>
                                 <ul class="post-listing clearfix">
                                     <li class="post-item clearfix tin-vip vipnoibat" style="border-color: #E13427;"
                                         post-id="585160" *ngFor="let article of article | paginate: { itemsPerPage: 14, currentPage: page }">
