--- a/src/app/client/profiles/paypal/view-paypal/view-paypal.component.html
+++ b/src/app/client/profiles/paypal/view-paypal/view-paypal.component.html
@@ -14,8 +14,8 @@
                     
 <nav aria-label="breadcrumb">
 <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="https://phongtro123.com/">PhongTroThanhXuan.com</a></li>
-    <li class="breadcrumb-item"><a href="https://phongtro123.com/quan-ly/index.html">Quản lý</a></li>
+    <li class="breadcrumb-item"><a>PhongTroThanhXuan.com</a></li>
+    <li class="breadcrumb-item"><a >Quản lý</a></li>
     <li class="breadcrumb-item active" aria-current="page">Nạp tiền</li>
 </ol>
 </nav>
@@ -262,7 +262,7 @@
                                 <div class="w980">
                                     <p class="company_name"><strong>CÔNG TY TNHH LBKCORP</strong></p>
                                     <p><strong>Tổng đài CSKH: 0973800896</strong></p>
-                                    <p>Copyright © 2015 - 2021 phongtro123.com</p>
+                                    <p>Copyright © 2015 - 2021 PhongTroThanhXuan.com</p>
                                     <p>Email: cskh.phongtro@gmail.com | lienhe.phongtro@gmail.com</p>
                                     <p>Địa chỉ: LE-4.07, Toà nhà Lexington Residence, Số 67 Mai Chí Thọ, Phường An Phú, Quận 2, Tp. Hồ Chí Minh.</p>
                                     <p>Giấy phép đăng ký kinh doanh số 0313588502 do Sở kế hoạch và Đầu tư thành phố Hồ Chí Minh cấp ngày 30 tháng 3 năm 2017.</p>
