--- a/src/app/client/clients-page/client-rent-room/client-rent-room.component.html
+++ b/src/app/client/clients-page/client-rent-room/client-rent-room.component.html
@@ -11,7 +11,7 @@
                         <div class="section-header">
                             <h2 class="section-title">Cho thuê phòng trọ</h2>
                         </div>
-                        <div class="post-sort"><span>Sắp xếp: </span><a rel="nofollow" class="active">Mặc định</a>
+                        <div class="post-sort"><span>Sắp xếp: </span><a rel="nofollow" class="active">Mới nhất</a>
                         
                             </div>
                                 <ul class="post-listing clearfix">
