--- a/src/app/client/profiles/favorites-article/favorites-article.component.html
+++ b/src/app/client/profiles/favorites-article/favorites-article.component.html
@@ -14,8 +14,8 @@
 
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="https://PhongTroThanhXuan.com/">PhongTroThanhXuan.com</a></li>
-                            <li class="breadcrumb-item"><a href="https://PhongTroThanhXuan.com/quan-ly/index.html">Quản lý</a></li>
+                            <li class="breadcrumb-item"><a >PhongTroThanhXuan.com</a></li>
+                            <li class="breadcrumb-item"><a >Quản lý</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Bài viết yêu thích</li>
                         </ol>
                     </nav>
